// The types described here represent the format of messages used in the
// Shipping system. The name of the used RabbitMQ exchange is "shipping".

syntax = "proto3";

package booking;

option go_package = "booking/pb";

import "google/protobuf/timestamp.proto";
import "itinerary.proto";
// import "common.proto";

message NewCargoBooked {
  string tracking_id = 1;
  string origin = 2;
  string destination = 3;
  google.protobuf.Timestamp arrival_deadline = 4;
  Delivery delivery = 5;
}

message CargoToRouteAssigned {
  string tracking_id = 1;
  itinerary.Itinerary itinerary = 2;
  google.protobuf.Timestamp eta = 3;
}

message CargoDestinationChanged {
  string tracking_id = 1;
  string destination = 2;
}

message CargoWasHandled {
  string tracking_id = 1;
  Delivery delivery = 2;
}

message Delivery {
  string transport_status = 1;
  HandlingActivity next_expected_activity = 2;
  google.protobuf.Timestamp eta = 3;
  HandlingEvent last_event = 4;
}

enum HandlingEventType {
  NotHandled = 0;
  Load = 1;
  Unload = 2;
  Receive = 3;
  Claim = 4;
  Customs = 5;
}

message HandlingActivity {
  HandlingEventType type = 1;
  string location = 2;
  string voyage_number = 3;
}

message HandlingEvent {
  string tracking_id = 1;
  HandlingActivity activity = 2;
}